--- a/detail.html
+++ b/detail.html
@@ -31,9 +31,6 @@
   <script src="https://cdn.tailwindcss.com/3.3.0"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
 
-  <!-- CDN for jquery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-
     <style>
         /* #canvas{
             background-color: rgba(58, 58, 58, 0.5);
@@ -66,14 +63,14 @@ class="relative flex w-full flex-wrap items-center justify-between bg-rose-500 p
 
 <div class="w-screen flex justify-center z-10 l-0 t-0" >
     <div class="w-full lg:w-1/2 p-8 rounded-xl mx-auto mt-5 justify-center shadow-xl" id="canvas">
-        <h1 class="font-bold text-3xl text-center text-white w-full uppercase mb-3"><p id="title"></p></h1>
+        <h1 class="font-bold text-3xl text-center text-black w-full uppercase mb-3"><p id="title"></p></h1>
         <img src="" alt="Push Ups" class="w-3/4 h-96 object-cover rounded-xl mx-auto mb-3" id="img">
-        <h3 class="text-xl uppercase text-center text-white"><b>level </b>: <span id="level"></span></h3>
-        <h3 class="text-xl uppercase text-center text-white"><b>sets </b>: <span id="sets"></span></h3>
-        <h3 class="text-xl uppercase text-center text-white"><b>reps </b>: <span id="reps"></span></h3>
-        <h3 class="text-xl uppercase text-center text-white"><b>rest </b>: <span id="rest"></span> minute</h3>
-        <h3 class="text-xl uppercase text-center text-white"><b>equipment </b>: <span id="equipment"></span></h3>
-        <h3 class="text-xl uppercase text-center text-white"><b>target </b>: <span id="target"></span></h3>
+        <h3 class="text-xl uppercase text-center text-black"><b>level </b>: <span id="level"></span></h3>
+        <h3 class="text-xl uppercase text-center text-black"><b>sets </b>: <span id="sets"></span></h3>
+        <h3 class="text-xl uppercase text-center text-black"><b>reps </b>: <span id="reps"></span></h3>
+        <h3 class="text-xl uppercase text-center text-black"><b>rest </b>: <span id="rest"></span> minute</h3>
+        <h3 class="text-xl uppercase text-center text-black"><b>equipment </b>: <span id="equipment"></span></h3>
+        <h3 class="text-xl uppercase text-center text-black"><b>target </b>: <span id="target"></span></h3>
     </div>
 </div>
 
@@ -82,7 +79,7 @@ class="relative flex w-full flex-wrap items-center justify-between bg-rose-500 p
 <script src="/src/js/fetch.js"></script>
 <script src="/src/js/idb.js"></script>
 <script src="/src/js/utility.js"></script>
-<script src="/src/js/app.js"></script>
+{% comment %} <script src="/src/js/app.js"></script> {% endcomment %}
 <script src="/src/js/detail.js"></script>
 
 </body>
