fix: add static cache

--- a/offline.html
+++ b/offline.html
@@ -42,7 +42,7 @@
         <a class="mx-2 my-1 flex items-center lg:mb-0 lg:mt-0" href="#">
           <img
             class="me-2"
-            src="/src/images/icons/apple-icon-57x57.png"s
+            src="/src/images/icons/apple-icon-57x57.png"
             style="height: 20px"
             alt="PCU-FIT Logo"
             loading="lazy" />
