--- a/detail.html
+++ b/detail.html
@@ -32,9 +32,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
 
     <style>
-        /* #canvas{
-            background-color: rgba(58, 58, 58, 0.5);
-        } */
     </style>
 </head>
 <body>
@@ -64,7 +61,7 @@ class="relative flex w-full flex-wrap items-center justify-between bg-rose-500 p
 <div class="w-screen flex justify-center z-10 l-0 t-0" >
     <div class="w-full lg:w-1/2 p-8 rounded-xl mx-auto mt-5 justify-center shadow-xl" id="canvas">
         <h1 class="font-bold text-3xl text-center text-black w-full uppercase mb-3"><p id="title"></p></h1>
-        <img src="" alt="Push Ups" class="w-3/4 h-96 object-cover rounded-xl mx-auto mb-3" id="img">
+        <img src="" alt="sports" class="w-3/4 h-96 object-cover rounded-xl mx-auto mb-3" id="img">
         <h3 class="text-xl uppercase text-center text-black"><b>level </b>: <span id="level"></span></h3>
         <h3 class="text-xl uppercase text-center text-black"><b>sets </b>: <span id="sets"></span></h3>
         <h3 class="text-xl uppercase text-center text-black"><b>reps </b>: <span id="reps"></span></h3>
@@ -79,7 +76,7 @@ class="relative flex w-full flex-wrap items-center justify-between bg-rose-500 p
 <script src="/src/js/fetch.js"></script>
 <script src="/src/js/idb.js"></script>
 <script src="/src/js/utility.js"></script>
-{% comment %} <script src="/src/js/app.js"></script> {% endcomment %}
+<script src="/src/js/app.js"></script>
 <script src="/src/js/detail.js"></script>
 
 </body>
