--- a/offline.html
+++ b/offline.html
@@ -52,6 +52,10 @@
     </div>
   </nav>
 
+  <div class="w-full flex r z-10 l-0 t-0">
+      <a href="/index.html" class="bg-rose-500 text-white font-bold py-2 px-4 rounded-xl m-5 shadow-xl">Back</a>
+  </div>
+
   <div class="w-screen h-screen flex justify-center items-center">
     <div class="flex flex-col items-center">
       <div class="flex justify-center items-center">
