--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             style="height: 20px"
             alt="PCU-FIT Logo"
             loading="lazy" />
-          <span class="text-white dark:text-white text-2xl font-bold">PCU-FIT</span>
+          <span class="text-white dark:text-white text-lg md:text-xl lg:text-2xl font-bold">PCU-FIT</span>
         </a>
       </div>
     </div>
@@ -57,7 +57,7 @@
     id="typing-container">
   </div>
 
-  <div class="grid grid-cols-2 md:grid-cols-4 gap-5 w-full px-12" id="card-place">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 w-full px-12" id="card-place">
     <!-- Card -->
     <!-- Card -->
   </div>
