--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PCUFIT</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/src/css/app.css">
-  <link rel="stylesheet" href="/src/css/feed.css">
   <link rel="manifest" href="/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="PWAGram">
+  <meta name="apple-mobile-web-app-title" content="PCU-FIT">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-60x60.png" sizes="60x60">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-72x72.png" sizes="72x72">
@@ -31,12 +27,10 @@
   <script src="https://cdn.tailwindcss.com/3.3.0"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
 
-
 </head>
 <body>
   <!-- Navbar -->
-  <nav
-  class="relative flex w-full flex-wrap items-center justify-between bg-rose-500 py-2 shadow-dark-mild dark:bg-rose-700 lg:py-4">
+  <nav class="flex-no-wrap relative flex w-full items-center justify-between bg-rose-500 py-2 shadow-dark-mild dark:bg-neutral-700 lg:justify-start lg:py-4">
     <div class="flex w-full flex-wrap items-center justify-between px-3">
       <div>
         <a class="mx-2 my-1 flex items-center lg:mb-0 lg:mt-0" href="#">
@@ -50,24 +44,42 @@
         </a>
       </div>
     </div>
+    <div class="relative flex items-center">
+      <!-- Button -->
+      <button
+      id="install-button"
+      type="button"
+      data-twe-ripple-init
+      data-twe-ripple-color="light"
+      class="inline-block rounded !bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white !shadow-primary-3 transition duration-150 ease-in-out !hover:bg-primary-accent-300 !hover:shadow-primary-2 !focus:bg-primary-accent-300 !focus:shadow-primary-2 !focus:outline-none !focus:ring-0 !active:bg-primary-600 !active:shadow-primary-2 !motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+      <svg class="w-6 h-6 fill-[#ffffff]" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+
+        <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+        <path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"></path>
+      
+      </svg>
+    </button>
+    </div>
   </nav>
 
   <!-- Greetings -->
-  <div class="w-full text-start mx-12 mt-6 font-dillan text-4xl font-bold typing-container whitespace-normal xl:text-6xl gs_reveal uppercase mb-8"
+  <div class="w-full text-center mt-6 font-dillan text-4xl font-bold typing-container whitespace-normal xl:text-6xl gs_reveal uppercase mb-8 h-16"
     id="typing-container">
   </div>
+
+
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 w-full px-12" id="card-place">
     <!-- Card -->
     <!-- Card -->
   </div>
 
+<script src="/src/js/app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 <script src="/src/js/promise.js"></script>
 <script src="/src/js/fetch.js"></script>
 <script src="/src/js/idb.js"></script>
 <script src="/src/js/utility.js"></script>
-<script src="/src/js/app.js"></script>
 <script src="/src/js/feed.js"></script>
 
 <!-- Script for typing -->
