--- a/offline.html
+++ b/offline.html
@@ -52,7 +52,7 @@
       <a href="/index.html" class="bg-rose-500 text-white font-bold py-2 px-4 rounded-xl m-5 shadow-xl">Back</a>
   </div>
 
-  <div class="w-screen h-screen flex justify-center items-center">
+  <div class="w-screen h-screen flex justify-center items-center px-8">
     <div class="flex flex-col items-center">
       <div class="flex justify-center items-center">
         <img src="/src/images/icons/apple-icon-180x180.png" alt="PCU-FIT Logo" style="height: 200px" />
